--- a/evm/spec/mpts.tex
+++ b/evm/spec/mpts.tex
@@ -1,6 +1,6 @@
 \section{Merkle Patricia Tries}
 \label{tries}
-The \emph{EVM World state} is a representation of the different accounts at a particular time, as well as the last processed transactions together with their receipts. The world state is represented using \emph{Merkle Patricia Tries} (MPTs) \cite[App.~D]{yellowpaper}, and there are three different tries: the state trie, the transaction trie and the receipt trie.
+The \emph{EVM World state} is a representation of the different accounts at a particular time, as well as the last processed transactions together with their receipts. The world state is represented using \emph{Merkle Patricia Tries} (MPTs) \cite[App.~D]{yellowpaper}, and there are two different tries: the state trie and the receipts trie.
 
 For each transaction we need to show that the prover knows preimages of the hashed initial and final EVM states.  When the kernel starts execution, it stores these three tries within the {\tt Segment::TrieData} segment. The prover loads the initial tries from the inputs into memory. Subsequently, the tries are modified during transaction execution, inserting new nodes or deleting existing nodes. 
 
@@ -31,10 +31,7 @@ The state trie payload contains the account data. Each account is stored in 4 co
 \end{enumerate}
 The storage trie payload in turn is a single word.
 
-\subsubsection{Transaction Trie}
-The transaction trie nodes contain the length of the RLP encoded transaction, followed by the bytes of the RLP encoding of the transaction.
-
-\subsubsection{Receipt Trie}
+\subsubsection{Receipts Trie}
 The payload of the receipts trie is a receipt. Each receipt is stored as
 \begin{enumerate}
 	\item the length in words of the payload,
@@ -80,7 +77,6 @@ The payloads in turn are RLP encoded as follows
 \begin{description}
 	\item[State Trie:] Encoded as a list containing nonce, balance, storage trie hash and code hash.
 	\item[Storage Trie:] The RLP encoding of the value (thus the double RLP encoding)
-	\item[Transaction Trie:] The RLP encoded transaction.
 	\item[Receipt Trie:] Depending on the transaction type it's encoded as ${\sf RLP}({\sf RLP}({\tt receipt}))$ for Legacy transactions or ${\sf RLP}({\tt txn\_type}||{\sf RLP}({\tt receipt}))$ for transactions of type 1 or 2. Each receipt is encoded as a list containing:
 	\begin{enumerate}
 		\item the status,
